update combo page

--- a/src/main/resources/templates/user/cart.html
+++ b/src/main/resources/templates/user/cart.html
@@ -71,7 +71,7 @@
                     <a class="nav-link" href="/category"> Sản phẩm </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/category"> Combo </a>
+                    <a class="nav-link" href="/combo"> Combo </a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="/category"> Dịch vụ </a>
