--- a/src/main/resources/templates/user/category.html
+++ b/src/main/resources/templates/user/category.html
@@ -47,7 +47,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/category">
+                                    <a class="nav-link" href="/combo">
                                         Combo
                                     </a>
                                 </li>
