--- a/src/main/resources/templates/user/product.html
+++ b/src/main/resources/templates/user/product.html
@@ -51,7 +51,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/category">
+                                <a class="nav-link" href="/combo">
                                     Combo
                                 </a>
                             </li>
