--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -47,6 +47,7 @@
                     <a href="/dashboard/product" class="nav-item nav-link"><i class="fa fa-box me-2"></i>Sản phẩm</a>
                     <a href="/dashboard/add-product" class="nav-item nav-link"><i class="fa fa-plus-circle me-2"></i>Tạo sản phẩm</a>
                     <a href="/dashboard/update-product" class="nav-item nav-link"><i class="fa fa-edit me-2"></i>Chỉnh sửa sản phẩm</a>
+                    <a href="/dashboard/category" class="nav-item nav-link"><i class="fa fa-book me-2"></i>Tạo danh mục</a>
                 </div>
             </nav>
         </div>
