--- a/src/main/resources/templates/admin/category.html
+++ b/src/main/resources/templates/admin/category.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Sản phẩm</title>
+    <title>Tạo danh mục</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -19,16 +19,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="/css/bootstrap.css" rel="stylesheet">
+    <link href="/css/bootstrap.css" rel="stylesheet" type="text/css">
 
     <!-- Template Stylesheet -->
-    <link href="/css/admin.css" rel="stylesheet">
+    <link href="/css/admin.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
     <div class="container-fluid position-relative bg-white d-flex p-0">
         <!-- Spinner Start -->
-        <div id="spinner" class="show bg-dark position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+        <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
             <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
                 <span class="sr-only">Loading...</span>
             </div>
@@ -44,10 +44,10 @@
                 </a>
                 <div class="navbar-nav w-100">
                     <a href="/dashboard" class="nav-item nav-link"><i class="fa fa-home me-2"></i>Dashboard</a>
-                    <a href="/dashboard/product" class="nav-item nav-link active"><i class="fa fa-box me-2"></i>Sản phẩm</a>
+                    <a href="/dashboard/product" class="nav-item nav-link"><i class="fa fa-box me-2"></i>Sản phẩm</a>
                     <a href="/dashboard/add-product" class="nav-item nav-link"><i class="fa fa-plus-circle me-2"></i>Tạo sản phẩm</a>
                     <a href="/dashboard/update-product" class="nav-item nav-link"><i class="fa fa-edit me-2"></i>Chỉnh sửa sản phẩm</a>
-                    <a href="/dashboard/category" class="nav-item nav-link"><i class="fa fa-book me-2"></i>Tạo danh mục</a>
+                    <a href="/dashboard/category" class="nav-item nav-link active"><i class="fa fa-book me-2"></i>Tạo danh mục</a>
                 </div>
             </nav>
         </div>
@@ -64,7 +64,7 @@
                 <a href="#" class="sidebar-toggler flex-shrink-0">
                     <i class="fa fa-bars"></i>
                 </a>
-                <h5 class="navbar-nav align-items-center ms-auto px-4">Sản phẩm</h5>
+                <h5 class="navbar-nav align-items-center ms-auto px-4">Tạo danh mục</h5>
                 <div class="navbar-nav align-items-center ms-auto">
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
@@ -80,12 +80,26 @@
 
 
             <!-- Create Product Form Start -->
+            <form class="container-fluid pt-4 px-4 needs-validation" novalidate>
+                <div class="bg-light rounded h-100 p-4">
+                    <div class="mb-4">
+                        <label for="categoryName" class="form-label">Tên danh mục</label>
+                        <input class="form-control" id="categoryName" placeholder="Nhập tên danh mục" required>
+                        <div class="invalid-feedback">
+                            Vui lòng nhập tên sản phẩm.
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary me-2">Tạo danh mục</button>
+                    <button type="submit" class="btn btn-outline-danger">Huỷ</button>
+                </div>
+            </form>
+            <!-- Create Product Form End -->
+
             <div class="container-fluid pt-4 px-4">
                 <div class="bg-light rounded p-4">
                     <div class="d-flex align-items-center justify-content-between mb-4">
-                        <h6 class="mb-0">Danh sách sản phẩm</h6>
+                        <h6 class="mb-0">Danh mục</h6>
                     </div>
-
                     <button id="deleteButton" class="btn btn-primary mb-3">Xoá</button>
                     
                     <div class="table-responsive">
@@ -93,65 +107,32 @@
                             <thead>
                                 <tr>
                                     <th></th>
-                                    <th>ID</th>
-                                    <th>Sản phẩm</th>
-                                    <th>Danh mục</th>
-                                    <th>Đơn giá</th>
-                                    <th>Tình trạng</th>
-                                    <th>Số lượng</th>
-                                    <th>Chỉnh sửa</th>
+                                    <th>Tên danh mục</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td></td>
-                                    <td>1</td>
-                                    <td>Bình hoa</td>
-                                    <td>Trang trí</td>
-                                    <td>1.000</td>
-                                    <td><span class="btn btn-sm btn-warning rounded-pill">Sắp hết</span></td>
-                                    <td>1</td>
-                                    <td>
-                                        <a href=""><i class="fa fa-pen-to-square fa m-1"></i></a>
-                                    </td>
+                                    <td>Danh mục 1</td>
                                 </tr>
                                 <tr>
                                     <td></td>
-                                    <td>2</td>
-                                    <td>Cái ghế</td>
-                                    <td>Trang trí</td>
-                                    <td>1.000</td>
-                                    <td><span class="btn btn-sm btn-danger rounded-pill">Hết hàng</span></td>
-                                    <td>2</td>
-                                    <td>
-                                        <a href=""><i class="fa fa-pen-to-square fa m-1"></i></a>
-                                    </td>
+                                    <td>Danh mục 2</td>
                                 </tr>
                                 <tr>
                                     <td></td>
-                                    <td>3</td>
-                                    <td>Cái bàn</td>
-                                    <td>Trang trí</td>
-                                    <td>1.000</td>
-                                    <td><span class="btn btn-sm btn-success rounded-pill">Còn hàng</span></td>
-                                    <td>3</td>
-                                    <td>
-                                        <a href=""><i class="fa fa-pen-to-square fa m-1"></i></a>
-                                    </td>
+                                    <td>Danh mục 3</td>
                                 </tr>
                             </tbody>
                         </table>
                     </div>
-                    
                 </div>
             </div>
-            <!-- Create Product Form End -->
-
 
 
             <!-- Footer Start -->
             <div class="container-fluid pt-4 px-4">
-                <div class="bg-light rounded p-4">
+                <div class="bg-light rounded-top p-4">
                     <div class="row align-items-center">
                         <div class="col-12 col-sm-6 text-center text-sm-start">
                             &copy; <a href="#">DeArt</a>, All Right Reserved. 
@@ -163,7 +144,6 @@
         </div>
         <!-- Content End -->
 
-
         <!-- Back to Top -->
         <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
     </div>
@@ -174,6 +154,7 @@
 
     <!-- Template Javascript -->
     <script src="/js/main.js"></script>
+    <script src="/js/form-validation.js"></script>
     <script src="/js/drop-image.js"></script>
 
     <!-- Datatables -->
@@ -181,6 +162,7 @@
     <script src="https://cdn.datatables.net/2.0.7/js/dataTables.bootstrap5.js"></script>
     <script src="https://cdn.datatables.net/select/2.0.2/js/dataTables.select.js"></script>
     <script src="https://cdn.datatables.net/select/2.0.2/js/select.dataTables.js"></script>
+
     <script src="/js/datatables.js"></script>
 </body>
 
