--- a/src/main/resources/templates/admin/edit_product.html
+++ b/src/main/resources/templates/admin/edit_product.html
@@ -46,6 +46,7 @@
                     <a href="/dashboard/product" class="nav-item nav-link"><i class="fa fa-box me-2"></i>Sản phẩm</a>
                     <a href="/dashboard/add-product" class="nav-item nav-link"><i class="fa fa-plus-circle me-2"></i>Tạo sản phẩm</a>
                     <a href="/dashboard/update-product" class="nav-item nav-link active"><i class="fa fa-edit me-2"></i>Chỉnh sửa sản phẩm</a>
+                    <a href="/dashboard/category" class="nav-item nav-link"><i class="fa fa-book me-2"></i>Tạo danh mục</a>
                 </div>
             </nav>
         </div>
@@ -78,50 +79,31 @@
 
 
             <!-- Edit Product Form Start -->
-            
-            <div class="container-fluid pt-4 px-4">
+            <form class="container-fluid pt-4 px-4 needs-validation" novalidate>
                 <div class="row g-4">
                     <div class="col-sm-12 col-xl-7">
                         <div class="bg-light rounded h-100 p-4">
                                 <div class="mb-4">
                                     <label for="category" class="form-label me-2">Danh mục</label>
-                                    <button href="#" class="btn btn-sm btn-link" data-bs-toggle="modal" data-bs-target="#modalCategory">Tạo mới</button>
-                                    <div class="modal fade" id="modalCategory" tabindex="-1" role="dialog" aria-labelledby="modalCategory" aria-hidden="true">
-                                        <div class="modal-dialog modal-dialog-centered" role="document">
-                                          <div class="modal-content">
-                                            <div class="modal-header">
-                                              <h5 class="modal-title" id="exampleModalLongTitle">Tạo danh mục mới</h5>
-                                              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
-                                              </button>
-                                            </div>
-                                            <div class="modal-body">
-                                              <form>
-                                                <div class="mb-4">
-                                                    <label for="categoryName" class="form-label">Tên danh mục</label>
-                                                    <input class="form-control" id="categoryName" placeholder="Nhập tên danh mục">
-                                                </div>
-                                              </form>
-                                            </div>
-                                            <div class="modal-footer">
-                                              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
-                                              <button type="button" class="btn btn-primary">Tạo mới</button>
-                                            </div>
-                                          </div>
-                                        </div>
-                                    </div>
                                     <!-- Show Category by selected -->
-                                    <select class="form-select" aria-label="Category">
-                                        <option >Chọn danh mục</option>
+                                    <select class="form-select" aria-label="Category" required>
+                                        <option selected disabled value="">Chọn danh mục</option>
                                         <option selected value="1">One</option> 
                                         <option value="2">Two</option>
                                         <option value="3">Three</option>
                                     </select>
+                                    <div class="invalid-feedback">
+                                        Vui lòng chọn danh mục.
+                                    </div>
                                 </div>
 
                                 <div class="mb-4">
                                     <label for="productName" class="form-label">Tên sản phẩm</label>
                                     <!-- Show productName by value = "..." -->
-                                    <input class="form-control" id="productName" value="Sản phẩm 1" placeholder="Nhập tên sản phẩm">
+                                    <input class="form-control" id="productName" value="Sản phẩm 1" placeholder="Nhập tên sản phẩm" required>
+                                    <div class="invalid-feedback">
+                                        Vui lòng nhập tên sản phẩm.
+                                    </div>
                                 </div>
 
                                 <div class="mb-3">
@@ -134,14 +116,13 @@
                                 <div class="mb-4">
                                     <label for="formFile" class="form-label">Ảnh sản phẩm</label>
                                     <label for="input-file" class="form-control" id="drop-area">
-                                        <input type="file" accept="image/*" id="input-file" hidden>
                                         <div id="img-view">
                                             <i class="fa-solid fa-cloud-arrow-up fa-5x"></i>
                                             <p>Drag and drop or click here<br>to upload image</p>
                                             <span>Upload any image from desktop</span>
                                         </div>
                                     </label>
-                                    
+                                    <input type="file" accept="image/*" id="input-file" hidden>
                                 </div>
                         </div>
                     </div>
@@ -150,15 +131,21 @@
                             <div class="mb-4">
                                 <label for="productQuantity" class="form-label">Số lượng</label>
                                 <!-- Show productQuantity by value = "..." -->
-                                <input type="number" class="form-control" id="productQuantity" value="1" placeholder="Nhập số lượng" min="0">
+                                <input type="number" class="form-control" id="productQuantity" value="1" placeholder="Nhập số lượng" min="0" required>
+                                <div class="invalid-feedback">
+                                    Vui lòng nhập số lượng.
+                                </div>
                             </div>
                             <div class="mb-4">
                                 <label for="productPrice" class="form-label">Đơn giá</label>
                                 <div class="input-group">
                                     <span class="input-group-text">đ</span>
                                     <!-- Show productPrice by value = "..." -->
-                                    <input type="text" class="form-control" value="200" id="productPrice" aria-label="Amount (to the nearest dong)">
+                                    <input type="text" class="form-control" value="200" id="productPrice" aria-label="Amount (to the nearest dong)" required>
                                     <span class="input-group-text">.000</span>
+                                </div>
+                                <div class="invalid-feedback">
+                                    Vui lòng nhập đơn giá.
                                 </div>
                             </div>
                             
@@ -166,18 +153,21 @@
                                 <label for="productStatus" class="form-label me-2">Tình trạng</label>
                                 <select class="form-select" aria-label="Status">
                                     <!-- Show Category by selected -->
-                                    <option>Chọn tình trạng</option>
+                                    <option selected disabled value="">Chọn tình trạng</option>
                                     <option selected value="1">One</option>
                                     <option value="2">Two</option>
                                     <option value="3">Three</option>
                                 </select>
+                                <div class="invalid-feedback">
+                                    Vui lòng chọn tình trạng.
+                                </div>
                             </div>
                             <button type="submit" class="btn btn-primary me-2">Lưu</button>
                             <button type="submit" class="btn btn-danger">Xoá sản phẩm</button>
                         </div>
                     </div>
                 </div>
-            </div>
+            </form>
             <!-- Edit Product Form End -->
 
 
@@ -207,6 +197,7 @@
 
     <!-- Template Javascript -->
     <script src="/js/main.js"></script>
+    <script src="/js/form-validation.js"></script>
     <script src="/js/drop-image.js"></script>
 </body>
 
