--- a/src/main/resources/templates/user/order-success.html
+++ b/src/main/resources/templates/user/order-success.html
@@ -43,7 +43,7 @@
           <div class="successnoti_text mb-3">Đặt hàng thành công</div>
         </div>
         <div class="ordercode_text mb-2">
-          Mã đơn hàng của bạn là <b class="order_code">123</b>
+          Mã đơn hàng của bạn là <b class="order_code" th:text="${order_code}">N/A</b>
         </div>
         <div class="order_noti mb-2">
           Chi tiết đơn hàng của bạn đã được gửi qua <b>email</b>.
